--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,6 +18,7 @@
                 {% if 'user' in session %}
                 <a href="{{url_for('auth.logout')}}">Logout</a>
                 {% else %}
+                <a href="{{url_for('auth.register')}}">Register</a>
                 <a href="{{url_for('auth.login')}}">Login</a>
                 {% endif %}
 
