--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,13 +1,17 @@
 {% extends "base.html" %}
 {% block title %}Registration page{% endblock %}
 {% block content %}
-<h2>Register</h2>
-<form action="{{url_for('auth.register')}}" method="POST">
-    <label for="username">Username:</label><br>
-    <input type="text" name="username" placeholder="enter username" required>
-    <label for="password">Password:</label><br>
-    <input type="password" name="password" placeholder="enter password"><br>
-    <input type="submit" value="Register">
-</form>
-<p>Already have an account? <a href="{{ url_for('auth.login') }}">Login here</a></p>
-{% endblock %}
+<div class="register-form">
+    <h2>Register</h2>
+    <div class="register-group">
+        <form action="{{url_for('auth.register')}}" method="POST">
+            <label for="username">Username:</label><br>
+            <input type="text" name="username" placeholder="enter username" required><br>
+            <label for="password">Password:</label><br>
+            <input type="password" name="password" placeholder="enter password"><br>
+            <input type="submit" value="Register">
+        </form>
+    </div>
+    <p>Already have an account? <a href="{{ url_for('auth.login') }}">Login here</a></p>
+    {% endblock %}
+</div>
