--- a/app/templates/tasks.html
+++ b/app/templates/tasks.html
@@ -9,6 +9,15 @@
         <button type="submit" class="btn">Add</button>
     </form>
     {% if tasks %}
+
+    <div class="progress-container"> <!-- 1 -->
+        <div class="progress-bar"> <!-- 2 -->
+            <div class="progress-fill" data-start="{{ last_progress }}" data-end="{{ progress }}">
+                <p> {{ progress }}% completed</p>
+            </div>
+        </div>
+    </div>
+
     <table class="task-table">
         <thead>
             <tr>
