Changed progress bar

--- a/app/templates/tasks.html
+++ b/app/templates/tasks.html
@@ -12,7 +12,7 @@
 
     <div class="progress-container"> <!-- 1 -->
         <div class="progress-bar"> <!-- 2 -->
-            <div class="progress-fill" data-start="{{ last_progress }}" data-end="{{ progress }}">
+            <div class="progress-fill" data-end="{{ progress }}">
                 <p> {{ progress }}% completed</p>
             </div>
         </div>
